--- a/src/html/event.html
+++ b/src/html/event.html
@@ -15,7 +15,7 @@
     <header class="page-header">
       <div class="page-header__container">
         <a href="index.html" class="page-header__logo">
-          <img src="images/logo.svg" class="page-header__logo-img"/>
+          <img src="assets/images/logo.svg" class="page-header__logo-icon"/>
         </a>
   
         <nav class="page-header__nav">
@@ -25,35 +25,45 @@
           <a href="#" class="page-header__nav-link">Контакты</a>
         </nav>
   
-        <a href="#" class="page-header__user-btn">Войти</a>
+        <div class="page-header__right-block">
+          <a href="#" class="btn page-header__user-btn">
+            Войти
+          </a>
+        </div>
       </div>
     </header>
 
     <main class="main">
-      <div class="home">
-        <header class="main-header home__main-header">
-          <h1 class="main-header__title">Арт — пространство</h1>
 
-          <picture class="main-header__picture">
-            <img src="images/lenni.png" class="main-header__img"/>
-          </picture>
+        <!-- Здесь будут хлебные крошки -->
 
-          <p class="main-header__text">
-            для людей, горящих сердец и делом 
-            место для настоящего
-          </p>
-          
-        </header>
+        <article class="event">
 
-        <section class="offers home__offers"></section>
-        <section class="about home__about"></section>
-        <section class="upcoming home__upcoming"></section>
-        <section class="blog home__blog"></section>
-        <section class="contacts home__contacts"></section>
+          <!-- Здесь пропущенное содержимое страницы -->
+
+          <form class="reserve event__reserve">
+
+            <div class="reserve__checks">
+              Чекбоксы
+            </div>
+
+            <div class="reserve__scheme">
+              Схема столов
+            </div>
+
+            <div class="reserve__order">
+              Оформление заказа
+            </div>
+
+            <div class="reserve__legend">
+              Легенда
+            </div>
+
+          </form>
+
+        </article>
         
-        <div class="doit home__doit"></div>
-      </div>
-    </main>
+      </main>
 
     <footer class="page-footer"></footer>
   </body>
