--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,33 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Lenni Art</title>
-
-    <link rel="stylesheet" href="styles/styles.css?ver=0">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  </head>
+  @@include('blocks/head.html')
 
   <body>
-    <header class="page-header">
-      <div class="page-header__container">
-        <a href="index.html" class="page-header__logo">
-          <img src="assets/images/logo.svg" class="page-header__logo-img"/>
-        </a>
-  
-        <nav class="page-header__nav">
-          <a href="#" class="page-header__nav-link">Мероприятия</a>
-          <a href="#" class="page-header__nav-link">Блог</a>
-          <a href="#" class="page-header__nav-link">О нас</a>
-          <a href="#" class="page-header__nav-link">Контакты</a>
-        </nav>
-  
-        <a href="#" class="page-header__user-btn">Войти</a>
-      </div>
-    </header>
+    @@include('blocks/page-header.html')
 
     <main class="main">
       <div class="home">
@@ -35,7 +11,7 @@
           <h1 class="main-header__title">Арт — пространство</h1>
 
           <picture class="main-header__picture">
-            <img src="assets/mages/lenni.png" class="main-header__img"/>
+            <img src="assets/images/lenni.svg" class="main-header__img"/>
           </picture>
 
           <p class="main-header__text">
@@ -44,6 +20,11 @@
           </p>
           
         </header>
+
+        <!-- prettier-ignore -->
+        @@include('blocks/blog-listing.html', {"class": "home__listing"})
+
+        
 
         <section class="offers home__offers"></section>
         <section class="about home__about"></section>
@@ -55,6 +36,6 @@
       </div>
     </main>
 
-    <footer class="page-footer"></footer>
+    @@include('blocks/page-footer.html')
   </body>
 </html>
