--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
   <header class="page-header">
     <div class="page-header__container">
       <a href="index.html" class="page-header__logo">
@@ -105,14 +105,279 @@
           </article>
 
         </div>
-        <!-- Кнопка "Показать все" -->
-      </section>
-      <!-- Остальная разметка -->
-    </div>
-    </div>
-  </main>
 
-  <footer class="page-footer"></footer>
+
+        <a href="#" class="events__link link link__vertical">
+          <span class="link__name">
+            Показать еще
+          </span>
+
+          <svg class="link__icon" width="62" height="92">
+            <use xlink:href="assets/icons/symbols.svg#vertical_link"></use>
+          </svg>
+        </a>
+      </section>
+
+
+
+      <section class="tariff events__tariff">
+        <div class="tariff__container">
+          <h2 class="tariff__title section-title">
+            Дополнительные услуги
+          </h2>
+
+          <p class="tariff__description">
+            Перед запуском проекта, мы подготавливаем подробную смету и
+            согласуем ее с клиентом. Убедившись, что все пожеланию учтены и мы
+            можем приступать к реализациии проекта, начинается сложная, но
+            интересная работа, результатом которой будет проведение вашего
+            мероприятия на высшем уровне.
+          </p>
+
+          <table class="events__tariffs-table  table">
+            <thead class="table__head">
+              <tr class="table__head-tr">
+                <th class="table__th"></th>
+                <th class="table__th">Тариф «Light»</th>
+                <th class="table__th">Тариф «Promo»</th>
+                <th class="table__th">Тариф «All stars»</th>
+              </tr>
+            </thead>
+            <tbody class="table__body">
+              <tr class="table__tr">
+                <th class="table__body-th">Стоимость за час</th>
+                <td class="table__td">1 000 ₽</td>
+                <td class="table__td">3 000 ₽</td>
+                <td class="table__td">3 000 ₽</td>
+              </tr>
+              <tr class="table__tr">
+                <th class="table__body-th">Ведущий мероприятия</th>
+                <td class="table__td"></td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+              </tr>
+              <tr class="table__tr">
+                <th class="table__body-th">Фотосъемка</th>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+              </tr>
+              <tr class="table__tr">
+                <th class="table__body-th">Видеосъемка</th>
+                <td class="table__td"></td>
+                <td class="table__td"></td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+              </tr>
+              <tr class="table__tr">
+                <th class="table__body-th">Организация питания</th>
+                <td class="table__td"></td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+              </tr>
+              <tr class="table__tr">
+                <th class="table__body-th">Декор</th>
+                <td class="table__td"></td>
+                <td class="table__td"></td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+              </tr>
+              <tr class="table__tr">
+                <th class="table__body-th">Звуковое сопровождение</th>
+                <td class="table__td"></td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+              </tr>
+              <tr class="table__tr">
+                <th class="table__body-th">Дополнительное освещение</th>
+                <td class="table__td"></td>
+                <td class="table__td"></td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+              </tr>
+
+              <tr class="table__tr">
+                <th class="table__body-th">Клининг</th>
+                <td class="table__td"></td>
+                <td class="table__td"></td>
+                <td class="table__td">
+                  <span class="ok"></span>
+                </td>
+              </tr>
+            </tbody>
+
+            <tfoot class="table__footer">
+              <tr class="table__footer-tr">
+                <th class="table__footer-th"></th>
+                <th class="table__footer-th">Тариф «Light»</th>
+                <th class="table__footer-th">Тариф «Promo»</th>
+                <th class="table__footer-th">Тариф «All stars»</th>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </section>
+
+      <div class="offers events__offers">
+        <div class="offers__container">
+          <h3 class="offers__text">Я ХОЧУ:</h3>
+          <div class="offers__buttons">
+            <a href="#" class="offers__btn btn btn--red">Провести мероприятие</a>
+            <a href="#" class="offers__btn btn">Стать арендатором</a>
+          </div>
+        </div>
+      </div>
+
+      <section class="contacts events__contacts">
+        <div class="contacts__container">
+          <div class="contacts__items contacts__items--fdrow">
+            <div class="contacts-item contacts-item--fdcol">
+              <div class="contacts-item__img">
+                <svg class="contacts-item__icon" width="24" height="24">
+                  <use xlink:href="assets/icons/symbols.svg#information"></use>
+                </svg>
+              </div>
+              <div class="contacts-item__content">
+                <h4 class="contacts-item__title">Цены</h4>
+                <p class="contacts-item__info contacts-item__info--mw401 contacts-item__info--tacenter">
+                  Цены, указанные на сайте носят информационный характер. Мы
+                  придерживаемся индивидуального подхода в работе с клиентом.
+                </p>
+              </div>
+            </div>
+            <div class="contacts-item contacts-item--fdcol">
+              <div class="contacts-item__img">
+                <svg class="contacts-item__icon" width="24" height="24">
+                  <use xlink:href="assets/icons/symbols.svg#contact"></use>
+                </svg>
+              </div>
+              <div class="contacts-item__content">
+                <h4 class="contacts-item__title">Отдел аренды</h4>
+                <p class="contacts-item__info contacts-item__info--tacenter">
+                  Отдел организации мероприятий
+                </p>
+                <a href="tel: +74993500730" class="contacts-item__info contacts-item__info--tacenter">+7 499 350 0730</a>
+                <a href="mailto: hi@tagree.ru" class="contacts-item__info contacts-item__info--tacenter">hi@tagree.ru</a>
+              </div>
+            </div>
+            <div class="contacts-item contacts-item--fdcol">
+              <div class="contacts-item__img">
+                <svg class="contacts-item__icon" width="24" height="24">
+                  <use xlink:href="assets/icons/symbols.svg#handshake"></use>
+                </svg>
+              </div>
+              <div class="contacts-item__content">
+                <h4 class="contacts-item__title">Отдел мероприятий</h4>
+                <p class="contacts-item__info contacts-item__info--mw401 contacts-item__info--tacenter">
+                  Мы имеем все возможности для того, чтобы помочь как малому
+                  бизнесу и молодым талантам, так и большим корпорациям и
+                  холдингам.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </div>
+
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__container">
+      <div class="page-footer__border"></div>
+      <div class="page-footer__wrapper">
+        <nav class="page-footer__nav">
+          <a href="#" class="page-footer__nav-link">Календарь мероприятий</a>
+          <a href="#" class="page-footer__nav-link">Провести мероприятие</a>
+          <a href="#" class="page-footer__nav-link">Стать арендатором</a>
+          <a href="#" class="page-footer__nav-link">Наши проекты</a>
+          <a href="#" class="page-footer__nav-link">Контакты</a>
+        </nav>
+
+        <form class="page-footer__form">
+          <h4 class="page-footer__form-subscribe">Подпишись и будь в курсе происходящего
+          </h4>
+          <div class="subscribe__wrapper">
+            <input type="email" name="email" placeholder="Email" class="subscribe__input" required />
+            <button type="submit" class="subscribe__submit">Подписаться</button>
+          </div>
+          <label class="subscribe__check check">
+            <input type="checkbox" class="check__input" name="agree" required />
+            <span class="check__mark"></span>
+            <span class="check__label">
+              Согласен на обработку персональных данных
+            </span>
+
+          </label>
+        </form>
+      </div>
+
+      <div class="page-footer__bottom">
+        <div class="page-footer__docs">
+          <span class="page-footer__milenials">© Millennials 2022</span>
+          <span class="page-footer__confidence">Политика конфиденциальности</span>
+          <span class="page-footer__cookies">Cookies</span>
+        </div>
+
+
+
+        <!-- <div class="page-footer__social">
+            <a href="#" class="page-footer__link">
+              <svg class="page-footer__social-icon" width="58" height="58">
+                <use xlink:href="assets/icons/symbols.svg#social_inst"></use>
+              </svg>
+            </a>
+            <a href="#" class="page-footer__link">
+              <svg class="page-footer__social-icon" width="58" height="58">
+                <use xlink:href="assets/icons/symbols.svg#social_inst"></use>
+              </svg>
+            </a>
+        </div> -->
+
+
+        <div class="page-footer__social">
+          <a href="#" class="page-footer__link">
+            <svg class="page-footer__social-icon" width="160" height="58">
+              <use xlink:href="assets/icons/symbols.svg#social_network"></use>
+            </svg>
+          </a>
+        </div>
+
+
+        <div class="page-footer__tagree">
+          <span class="page-footer__promotion">Создание и продвижение</span>
+          <svg class="page-footer__tagree-icon" width="56" height="17">
+            <use xlink:href="assets/icons/symbols.svg#tagree">
+
+          </svg>
+        </div>
+      </div>
+    </div>
+
+
+
+  </footer>
 </body>
 
 </html>
