--- a/events.html
+++ b/events.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <title>Lenni Art</title>
 
   <link rel="stylesheet" href="styles/styles.css?ver=0">
@@ -26,18 +28,38 @@
         <a href="#" class="page-header__nav-link">Блог</a>
         <a href="#" class="page-header__nav-link">О нас</a>
         <a href="#" class="page-header__nav-link">Контакты</a>
+
+        <div class="page-header__nav-user">
+          <a href="#" class="page-header__nav-user-link">
+            Александр С.
+          </a>
+          <a href="#" class="page-header__nav-logout">
+            <svg class="page-header__nav-logout-icon" width="24" height="24">
+              <use xlink:href="assets/icons/symbols.svg#door"></use>
+            </svg>
+          </a>
+        </div>
       </nav>
 
       <div class="page-header__right-block">
         <a href="#" class="btn page-header__user-btn">
           Войти
+          <svg class="page-header__user-icon" width="21" height="18">
+            <use xlink:href="assets/icons/symbols.svg#user"></use>
+          </svg>
         </a>
+
+        <button type="button" class="page-header__nav-toggle" id="js-navToggle"></button>
       </div>
     </div>
   </header>
 
   <main class="main">
-
+    <div class="breadcrumbs">
+      <a href="#" class="breadcrumbs__link">Главная</a>
+      <a href="#" class="breadcrumbs__link">Раздел</a>
+      <a href="#" class="breadcrumbs__link">Страница раздела</a>
+    </div>
     <div class="events">
       <section class="listing events__listing">
         <h2 class="listing__title section-title">Мероприятия</h2>
@@ -105,7 +127,7 @@
           </article>
 
         </div>
-
+        <!-- Кнопка "Показать все" -->
 
         <a href="#" class="events__link link link__vertical">
           <span class="link__name">
@@ -118,11 +140,11 @@
         </a>
       </section>
 
-
+      <!-- Остальная разметка -->
 
       <section class="tariff events__tariff">
         <div class="tariff__container">
-          <h2 class="tariff__title section-title">
+          <h2 class="tariff__title section-title tariff__title--fz22">
             Дополнительные услуги
           </h2>
 
@@ -249,47 +271,48 @@
         </div>
       </div>
 
-      <section class="contacts events__contacts">
-        <div class="contacts__container">
-          <div class="contacts__items contacts__items--fdrow">
-            <div class="contacts-item contacts-item--fdcol">
-              <div class="contacts-item__img">
-                <svg class="contacts-item__icon" width="24" height="24">
+      <section class="contacts-events events__contacts-events">
+        <div class="contacts-events__container">
+          <div class="contacts-events__items">
+
+            <div class="contacts-events__item contacts-events-item">
+              <div class="contacts-events-item__img">
+                <svg class="contacts-events-item__icon" width="24" height="24">
                   <use xlink:href="assets/icons/symbols.svg#information"></use>
                 </svg>
               </div>
-              <div class="contacts-item__content">
-                <h4 class="contacts-item__title">Цены</h4>
-                <p class="contacts-item__info contacts-item__info--mw401 contacts-item__info--tacenter">
+              <div class="contacts-events-item__content">
+                <h4 class="contacts-events-item__title">Цены</h4>
+                <p class="contacts-events-item__info">
                   Цены, указанные на сайте носят информационный характер. Мы
                   придерживаемся индивидуального подхода в работе с клиентом.
                 </p>
               </div>
             </div>
-            <div class="contacts-item contacts-item--fdcol">
-              <div class="contacts-item__img">
-                <svg class="contacts-item__icon" width="24" height="24">
+            <div class="contacts-events__item contacts-events-item">
+              <div class="contacts-events-item__img">
+                <svg class="contacts-events-item__icon" width="24" height="24">
                   <use xlink:href="assets/icons/symbols.svg#contact"></use>
                 </svg>
               </div>
-              <div class="contacts-item__content">
-                <h4 class="contacts-item__title">Отдел аренды</h4>
-                <p class="contacts-item__info contacts-item__info--tacenter">
+              <div class="contacts-events-item__content">
+                <h4 class="contacts-events-item__title">Контакты</h4>
+                <p class="contacts-events-item__info">
                   Отдел организации мероприятий
                 </p>
-                <a href="tel: +74993500730" class="contacts-item__info contacts-item__info--tacenter">+7 499 350 0730</a>
-                <a href="mailto: hi@tagree.ru" class="contacts-item__info contacts-item__info--tacenter">hi@tagree.ru</a>
+                <a href="tel:+74993500730" class="contacts-events-item__info">+7 499 350 0730</a>
+                <a href="mailto:hi@tagree.ru" class="contacts-events-item__info">hi@tagree.ru</a>
               </div>
             </div>
-            <div class="contacts-item contacts-item--fdcol">
-              <div class="contacts-item__img">
-                <svg class="contacts-item__icon" width="24" height="24">
+            <div class="contacts-events__item contacts-events-item">
+              <div class="contacts-events-item__img">
+                <svg class="contacts-events-item__icon" width="24" height="24">
                   <use xlink:href="assets/icons/symbols.svg#handshake"></use>
                 </svg>
               </div>
-              <div class="contacts-item__content">
-                <h4 class="contacts-item__title">Отдел мероприятий</h4>
-                <p class="contacts-item__info contacts-item__info--mw401 contacts-item__info--tacenter">
+              <div class="contacts-events-item__content">
+                <h4 class="contacts-events-item__title">Преимущество</h4>
+                <p class="contacts-events-item__info">
                   Мы имеем все возможности для того, чтобы помочь как малому
                   бизнесу и молодым талантам, так и большим корпорациям и
                   холдингам.
@@ -303,6 +326,7 @@
     </div>
 
   </main>
+
   <footer class="page-footer">
     <div class="page-footer__container">
       <div class="page-footer__border"></div>
@@ -316,16 +340,15 @@
         </nav>
 
         <form class="page-footer__form">
-          <h4 class="page-footer__form-subscribe">Подпишись и будь в курсе происходящего
-          </h4>
+          <span class="page-footer__form-subscribe">Подпишись и будь в курсе происходящего</span>
           <div class="subscribe__wrapper">
             <input type="email" name="email" placeholder="Email" class="subscribe__input" required />
             <button type="submit" class="subscribe__submit">Подписаться</button>
           </div>
           <label class="subscribe__check check">
-            <input type="checkbox" class="check__input" name="agree" required />
+            <input type="checkbox" class="check__input" name="agree" checked />
             <span class="check__mark"></span>
-            <span class="check__label">
+            <span class="check__label check__label--s">
               Согласен на обработку персональных данных
             </span>
 
@@ -342,33 +365,33 @@
 
 
 
-        <!-- <div class="page-footer__social">
-            <a href="#" class="page-footer__link">
-              <svg class="page-footer__social-icon" width="58" height="58">
-                <use xlink:href="assets/icons/symbols.svg#social_inst"></use>
-              </svg>
-            </a>
-            <a href="#" class="page-footer__link">
-              <svg class="page-footer__social-icon" width="58" height="58">
-                <use xlink:href="assets/icons/symbols.svg#social_inst"></use>
-              </svg>
-            </a>
-        </div> -->
-
-
         <div class="page-footer__social">
           <a href="#" class="page-footer__link">
-            <svg class="page-footer__social-icon" width="160" height="58">
-              <use xlink:href="assets/icons/symbols.svg#social_network"></use>
+            <svg class="page-footer__social-icon" width="24" height="24">
+              <use xlink:href="assets/icons/symbols.svg#insta"></use>
+            </svg>
+          </a>
+          <a href="#" class="page-footer__link">
+            <svg class="page-footer__social-icon" width="24" height="24">
+              <use xlink:href="assets/icons/symbols.svg#vk"></use>
             </svg>
           </a>
         </div>
 
 
+        <!-- <div class="page-footer__social">
+            <a href="#" class="page-footer__link">
+              <svg class="page-footer__social-icon" width="160" height="58">
+                <use xlink:href="assets/icons/symbols.svg#social_network"></use>
+              </svg>
+            </a>
+        </div> -->
+
+
         <div class="page-footer__tagree">
           <span class="page-footer__promotion">Создание и продвижение</span>
           <svg class="page-footer__tagree-icon" width="56" height="17">
-            <use xlink:href="assets/icons/symbols.svg#tagree">
+            <use xlink:href="assets/icons/symbols.svg#tagree"></use>
 
           </svg>
         </div>
