slider add,map fixed

--- a/events.html
+++ b/events.html
@@ -3,8 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-
-  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <title>Lenni Art</title>
 
   <link rel="stylesheet" href="styles/styles.css?ver=0">
@@ -66,7 +64,7 @@
         <div class="listing__events-list">
           <!-- prettier-ignore -->
           <article class="event-card  listing__event-card">
-            <a href="#" class="event-card__link">
+            <a href="event.html" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/Nirvana.jpg" alt="nirvana" class="event-card__img" />
               </picture>
@@ -76,7 +74,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="#" class="event-card__link">
+            <a href="event.html" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/stuff.png" alt="stuff" class="event-card__img" />
               </picture>
@@ -86,7 +84,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="#" class="event-card__link">
+            <a href="event.html" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/Sade.png" alt="sade" class="event-card__img" />
               </picture>
@@ -96,7 +94,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="#" class="event-card__link">
+            <a href="event.html" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/Malewich.png" alt="malevich" class="event-card__img" />
               </picture>
@@ -106,7 +104,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="#" class="event-card__link">
+            <a href="event.html" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/Tatler.png" alt="tatler" class="event-card__img" />
               </picture>
@@ -116,7 +114,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="#" class="event-card__link">
+            <a href="event.html" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/hatters.png" alt="the_hatters" class="event-card__img" />
               </picture>
