--- a/default.html
+++ b/default.html
@@ -3,8 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-
-  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <title>Lenni Art</title>
 
   <link rel="stylesheet" href="styles/styles.css?ver=0">
@@ -15,7 +13,6 @@
 </head>
 
 <body class="body">
-
   <header class="page-header">
     <div class="page-header__container">
       <a href="index.html" class="page-header__logo">
@@ -54,15 +51,9 @@
       </div>
     </div>
   </header>
-
   <main class="main">
-    <div class="breadcrumbs">
-      <a href="#" class="breadcrumbs__link">Главная</a>
-      <a href="#" class="breadcrumbs__link">Раздел</a>
-      <a href="#" class="breadcrumbs__link">Страница раздела</a>
-    </div>
     <article class="article">
-      <div class="container-content">
+      <div class="article__container">
         <h1 class="article__title title">Заголовок страницы</h1>
         <div class="article__content content">
           <h1>Заголовок h1</h1>
@@ -73,8 +64,7 @@
           <h6>Заголовок h6</h6>
 
           <p>
-            Абзац текста, содержащий <b>жирный</b> текст и
-            <a href="https://tagree.ru/" target="_blank">ссылку</a>.
+            Абзац текста, содержащий <b>жирный</b> текст и <a href="https://tagree.ru/" target="_blank">ссылку</a>.
           </p>
           <ul>
             <li>Элемент списка 1</li>
@@ -86,13 +76,14 @@
             <li>Элемент списка 2</li>
             <li>Элемент списка 3</li>
           </ol>
-          <blockquote>Здесь содержится цитата</blockquote>
-          <img src="assets/images/Sade.png" alt="Подпись картинки" />
+          <blockquote>
+            Здесь содержится цитата
+          </blockquote>
+          <img src="assets/images/hatters.png" alt="Подпись картинки">
         </div>
       </div>
     </article>
   </main>
-
   <footer class="page-footer">
     <div class="page-footer__container">
       <div class="page-footer__border"></div>
@@ -167,7 +158,6 @@
 
 
   </footer>
-
 </body>
 
 </html>
