--- a/events.html
+++ b/events.html
@@ -3,26 +3,52 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+  <meta name="description" content="Арт—пространство для людей, горящих сердец и делом" />
+  <meta name="keywords" content="Lenni Art, пространство, мероприятия" />
+  <meta property="og:title" content="Lenni Art" />
+  <meta property="og:description" content="Арт пространство для людей, горящих сердцем и делом" />
+  <meta property="og:image" content="/assets/images/lenni-art.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lenni-art.ru/" />
   <title>Lenni Art</title>
+  <link rel="stylesheet" href="styles/styles.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png" />
+  <link rel="manifest" href="/assets/favicons/site.webmanifest" />
+  <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicons/favicon.ico" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml" />
+  <meta name="theme-color" content="#ffffff" />
 
-  <link rel="stylesheet" href="styles/styles.css?ver=0">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="scripts/jquery-3.7.1.min.js"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAELqrLiMyWfM_wwckJndQzmO9XEzvw_SU&amp"></script>
+  <script defer src="scripts/swiper.min.js"></script>
+  <script defer src="scripts/jquery.selectric.min.js"></script>
+  <script defer src="scripts/jquery.mask.js"></script>
+  <script defer src="scripts/air-datepicker.js"></script>
+  <script defer src="scripts/jquery.validate.min.js"></script>
+  <script defer src="scripts/jquery.validate-init.js"></script>
+  <script defer src="scripts/main.js"></script>
 </head>
+
 
 <body class="body">
   <header class="page-header">
     <div class="page-header__container">
       <a href="index.html" class="page-header__logo">
-        <svg class="page-header__logo-icon" width="202" height="147">
+        <svg class="page-header__logo-img" width="202" height="147">
           <use xlink:href="assets/icons/symbols.svg#logo"></use>
         </svg>
       </a>
 
       <nav class="page-header__nav">
-        <a href="events.html" class="page-header__nav-link">Мероприятия</a>
+        <a href="/events.html" class="page-header__nav-link">Мероприятия</a>
         <a href="#" class="page-header__nav-link">Блог</a>
         <a href="#" class="page-header__nav-link">О нас</a>
         <a href="#" class="page-header__nav-link">Контакты</a>
@@ -46,10 +72,10 @@
             <use xlink:href="assets/icons/symbols.svg#user"></use>
           </svg>
         </a>
-
         <button type="button" class="page-header__nav-toggle" id="js-navToggle"></button>
       </div>
     </div>
+
   </header>
 
   <main class="main">
@@ -64,7 +90,7 @@
         <div class="listing__events-list">
           <!-- prettier-ignore -->
           <article class="event-card  listing__event-card">
-            <a href="event.html" class="event-card__link">
+            <a href="#" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/Nirvana.jpg" alt="nirvana" class="event-card__img" />
               </picture>
@@ -74,7 +100,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="event.html" class="event-card__link">
+            <a href="#" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/stuff.png" alt="stuff" class="event-card__img" />
               </picture>
@@ -84,7 +110,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="event.html" class="event-card__link">
+            <a href="#" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/Sade.png" alt="sade" class="event-card__img" />
               </picture>
@@ -94,7 +120,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="event.html" class="event-card__link">
+            <a href="#" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/Malewich.png" alt="malevich" class="event-card__img" />
               </picture>
@@ -104,7 +130,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="event.html" class="event-card__link">
+            <a href="#" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/Tatler.png" alt="tatler" class="event-card__img" />
               </picture>
@@ -114,7 +140,7 @@
             </a>
           </article>
           <article class="event-card  listing__event-card">
-            <a href="event.html" class="event-card__link">
+            <a href="#" class="event-card__link">
               <picture class="event-card__picture">
                 <img src="assets/images/hatters.png" alt="the_hatters" class="event-card__img" />
               </picture>
@@ -127,14 +153,13 @@
         </div>
         <!-- Кнопка "Показать все" -->
 
-        <a href="#" class="events__link link link__vertical">
-          <span class="link__name">
-            Показать еще
-          </span>
-
-          <svg class="link__icon" width="62" height="92">
-            <use xlink:href="assets/icons/symbols.svg#vertical_link"></use>
-          </svg>
+        <a href="#" class="events__link link link--vertical">
+          <span class="link__name">Показать еще</span>
+          <div class="link__arrow arrow arrow--vertical">
+            <svg class="arrow__icon" width="91" height="60">
+              <use xlink:href="assets/icons/symbols.svg#link"></use>
+            </svg>
+          </div>
         </a>
       </section>
 
@@ -259,58 +284,58 @@
         </div>
       </section>
 
-      <div class="offers events__offers">
+      <section class="offers events__offers">
         <div class="offers__container">
-          <h3 class="offers__text">Я ХОЧУ:</h3>
-          <div class="offers__buttons">
-            <a href="#" class="offers__btn btn btn--red">Провести мероприятие</a>
-            <a href="#" class="offers__btn btn">Стать арендатором</a>
+          <h3 class="offers__i-want">Я хочу:</h3>
+          <div class="offers__btns">
+            <a href="#" id="js-eventOpenBtn" class="offers__btn-1 btn btn--red">Провести мероприятия</a>
+            <a href="#" class="offers__btn-2 btn">Стать арендатором</a>
           </div>
         </div>
-      </div>
+      </section>
 
-      <section class="contacts-events events__contacts-events">
-        <div class="contacts-events__container">
-          <div class="contacts-events__items">
 
-            <div class="contacts-events__item contacts-events-item">
-              <div class="contacts-events-item__img">
-                <svg class="contacts-events-item__icon" width="24" height="24">
+      <section class="organisation events__organisation">
+        <div class="organisation__container">
+          <div class="organisation__items">
+            <div class="organisation__item organisation-item">
+              <div class="organisation-item__img">
+                <svg class="organisation-item__icon" width="24" height="24">
                   <use xlink:href="assets/icons/symbols.svg#information"></use>
                 </svg>
               </div>
-              <div class="contacts-events-item__content">
-                <h4 class="contacts-events-item__title">Цены</h4>
-                <p class="contacts-events-item__info">
+              <div class="organisation-item__content">
+                <h4 class="organisation-item__title">Цены</h4>
+                <p class="organisation-item__info">
                   Цены, указанные на сайте носят информационный характер. Мы
                   придерживаемся индивидуального подхода в работе с клиентом.
                 </p>
               </div>
             </div>
-            <div class="contacts-events__item contacts-events-item">
-              <div class="contacts-events-item__img">
-                <svg class="contacts-events-item__icon" width="24" height="24">
+            <div class="organisation__item organisation-item">
+              <div class="organisation-item__img">
+                <svg class="organisation-item__icon" width="24" height="24">
                   <use xlink:href="assets/icons/symbols.svg#contact"></use>
                 </svg>
               </div>
-              <div class="contacts-events-item__content">
-                <h4 class="contacts-events-item__title">Контакты</h4>
-                <p class="contacts-events-item__info">
+              <div class="organisation-item__content">
+                <h4 class="organisation-item__title">Отдел аренды</h4>
+                <p class="organisation-item__info">
                   Отдел организации мероприятий
                 </p>
-                <a href="tel:+74993500730" class="contacts-events-item__info">+7 499 350 0730</a>
-                <a href="mailto:hi@tagree.ru" class="contacts-events-item__info">hi@tagree.ru</a>
+                <a href="tel:+74993500730" class="organisation-item__info">+7 499 350 0730</a>
+                <a href="mailto:hi@tagree.ru" class="organisation-item__info">hi@tagree.ru</a>
               </div>
             </div>
-            <div class="contacts-events__item contacts-events-item">
-              <div class="contacts-events-item__img">
-                <svg class="contacts-events-item__icon" width="24" height="24">
+            <div class="organisation__item organisation-item">
+              <div class="organisation-item__img">
+                <svg class="organisation-item__icon" width="24" height="24">
                   <use xlink:href="assets/icons/symbols.svg#handshake"></use>
                 </svg>
               </div>
-              <div class="contacts-events-item__content">
-                <h4 class="contacts-events-item__title">Преимущество</h4>
-                <p class="contacts-events-item__info">
+              <div class="organisation-item__content">
+                <h4 class="organisation-item__title">Отдел мероприятий</h4>
+                <p class="organisation-item__info">
                   Мы имеем все возможности для того, чтобы помочь как малому
                   бизнесу и молодым талантам, так и большим корпорациям и
                   холдингам.
@@ -327,8 +352,9 @@
 
   <footer class="page-footer">
     <div class="page-footer__container">
-      <div class="page-footer__border"></div>
-      <div class="page-footer__wrapper">
+      <div class="page-footer__separator"></div>
+
+      <div class="page-footer__nav-subcribe-container">
         <nav class="page-footer__nav">
           <a href="#" class="page-footer__nav-link">Календарь мероприятий</a>
           <a href="#" class="page-footer__nav-link">Провести мероприятие</a>
@@ -337,67 +363,57 @@
           <a href="#" class="page-footer__nav-link">Контакты</a>
         </nav>
 
-        <form class="page-footer__form">
-          <span class="page-footer__form-subscribe">Подпишись и будь в курсе происходящего</span>
-          <div class="subscribe__wrapper">
-            <input type="email" name="email" placeholder="Email" class="subscribe__input" required />
-            <button type="submit" class="subscribe__submit">Подписаться</button>
+        <form action="https://jsonplaceholder.typicode.com/posts" class="page-footer__subscribe-form subscribe-form" id="js-subscribeForm">
+          <div class="subscribe-form__field">
+            <span class="subscribe-form__field-label">Подпишись и будь в курсе происходящего</span>
+
+            <div class="subscribe-form__wrapper">
+              <input id="js-subscribeEmail" class="subscribe-form__field-input" type="email" placeholder="Email" name="email" required />
+
+              <button class="subscribe-form__send-btn" type="submit" name="send">
+                Подписаться
+              </button>
+            </div>
           </div>
-          <label class="subscribe__check check">
-            <input type="checkbox" class="check__input" name="agree" checked />
+
+          <label class="check check--pt0 subscribe-form__check">
+            <input class="check__input" type="checkbox" name="agree" required checked />
+
             <span class="check__mark"></span>
             <span class="check__label check__label--s">
               Согласен на обработку персональных данных
             </span>
-
           </label>
         </form>
       </div>
 
-      <div class="page-footer__bottom">
-        <div class="page-footer__docs">
-          <span class="page-footer__milenials">© Millennials 2022</span>
-          <span class="page-footer__confidence">Политика конфиденциальности</span>
-          <span class="page-footer__cookies">Cookies</span>
+      <div class="page-footer__vault">
+        <div class="page-footer__policy">
+          <a href="#" class="link page-footer__millennials">© Millennials 2022</a>
+          <a href="#" class="link page-footer__confident">Политика конфиденциальности</a>
+          <a href="#" class="link page-footer__cookies">Cookies</a>
         </div>
-
-
-
         <div class="page-footer__social">
-          <a href="#" class="page-footer__link">
-            <svg class="page-footer__social-icon" width="24" height="24">
-              <use xlink:href="assets/icons/symbols.svg#insta"></use>
+          <a href="#" class="page-footer__inst-link">
+            <svg class="page-footer__social-icon" width="58" height="58">
+              <use xlink:href="assets/icons/symbols.svg#social_inst"></use>
             </svg>
           </a>
-          <a href="#" class="page-footer__link">
-            <svg class="page-footer__social-icon" width="24" height="24">
-              <use xlink:href="assets/icons/symbols.svg#vk"></use>
+          <a href="#" class="page-footer__inst-link">
+            <svg class="page-footer__social-icon" width="58" height="58">
+              <use xlink:href="assets/icons/symbols.svg#social_vk"></use>
             </svg>
           </a>
         </div>
-
-
-        <!-- <div class="page-footer__social">
-            <a href="#" class="page-footer__link">
-              <svg class="page-footer__social-icon" width="160" height="58">
-                <use xlink:href="assets/icons/symbols.svg#social_network"></use>
-              </svg>
-            </a>
-        </div> -->
-
-
         <div class="page-footer__tagree">
-          <span class="page-footer__promotion">Создание и продвижение</span>
-          <svg class="page-footer__tagree-icon" width="56" height="17">
-            <use xlink:href="assets/icons/symbols.svg#tagree"></use>
-
-          </svg>
+          <a href="#" class="link page-footer__tagree-label">Создание и продвижение
+            <svg class="page-footer__tagree-icon" width="56" height="17">
+              <use xlink:href="assets/icons/symbols.svg#tagree"></use>
+            </svg>
+          </a>
         </div>
       </div>
     </div>
-
-
-
   </footer>
 </body>
 
