--- a/default.html
+++ b/default.html
@@ -3,26 +3,53 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+  <meta name="description" content="Арт—пространство для людей, горящих сердец и делом" />
+  <meta name="keywords" content="Lenni Art, пространство, мероприятия" />
+  <meta property="og:title" content="Lenni Art" />
+  <meta property="og:description" content="Арт пространство для людей, горящих сердцем и делом" />
+  <meta property="og:image" content="/assets/images/lenni-art.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lenni-art.ru/" />
   <title>Lenni Art</title>
+  <link rel="stylesheet" href="styles/styles.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png" />
+  <link rel="manifest" href="/assets/favicons/site.webmanifest" />
+  <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicons/favicon.ico" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml" />
+  <meta name="theme-color" content="#ffffff" />
 
-  <link rel="stylesheet" href="styles/styles.css?ver=0">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="scripts/jquery-3.7.1.min.js"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAELqrLiMyWfM_wwckJndQzmO9XEzvw_SU&amp"></script>
+  <script defer src="scripts/swiper.min.js"></script>
+  <script defer src="scripts/jquery.selectric.min.js"></script>
+  <script defer src="scripts/jquery.mask.js"></script>
+  <script defer src="scripts/air-datepicker.js"></script>
+  <script defer src="scripts/jquery.validate.min.js"></script>
+  <script defer src="scripts/jquery.validate-init.js"></script>
+  <script defer src="scripts/main.js"></script>
 </head>
 
+
 <body class="body">
+
   <header class="page-header">
     <div class="page-header__container">
       <a href="index.html" class="page-header__logo">
-        <svg class="page-header__logo-icon" width="202" height="147">
+        <svg class="page-header__logo-img" width="202" height="147">
           <use xlink:href="assets/icons/symbols.svg#logo"></use>
         </svg>
       </a>
 
       <nav class="page-header__nav">
-        <a href="events.html" class="page-header__nav-link">Мероприятия</a>
+        <a href="/events.html" class="page-header__nav-link">Мероприятия</a>
         <a href="#" class="page-header__nav-link">Блог</a>
         <a href="#" class="page-header__nav-link">О нас</a>
         <a href="#" class="page-header__nav-link">Контакты</a>
@@ -46,14 +73,20 @@
             <use xlink:href="assets/icons/symbols.svg#user"></use>
           </svg>
         </a>
-
         <button type="button" class="page-header__nav-toggle" id="js-navToggle"></button>
       </div>
     </div>
+
   </header>
+
   <main class="main">
+    <div class="breadcrumbs">
+      <a href="#" class="breadcrumbs__link">Главная</a>
+      <a href="#" class="breadcrumbs__link">Раздел</a>
+      <a href="#" class="breadcrumbs__link">Страница раздела</a>
+    </div>
     <article class="article">
-      <div class="article__container">
+      <div class="container-content">
         <h1 class="article__title title">Заголовок страницы</h1>
         <div class="article__content content">
           <h1>Заголовок h1</h1>
@@ -64,7 +97,8 @@
           <h6>Заголовок h6</h6>
 
           <p>
-            Абзац текста, содержащий <b>жирный</b> текст и <a href="https://tagree.ru/" target="_blank">ссылку</a>.
+            Абзац текста, содержащий <b>жирный</b> текст и
+            <a href="https://tagree.ru/" target="_blank">ссылку</a>.
           </p>
           <ul>
             <li>Элемент списка 1</li>
@@ -76,18 +110,18 @@
             <li>Элемент списка 2</li>
             <li>Элемент списка 3</li>
           </ol>
-          <blockquote>
-            Здесь содержится цитата
-          </blockquote>
-          <img src="assets/images/hatters.png" alt="Подпись картинки">
+          <blockquote>Здесь содержится цитата</blockquote>
+          <img src="assets/images/Sade.png" alt="Подпись картинки" />
         </div>
       </div>
     </article>
   </main>
+
   <footer class="page-footer">
     <div class="page-footer__container">
-      <div class="page-footer__border"></div>
-      <div class="page-footer__wrapper">
+      <div class="page-footer__separator"></div>
+
+      <div class="page-footer__nav-subcribe-container">
         <nav class="page-footer__nav">
           <a href="#" class="page-footer__nav-link">Календарь мероприятий</a>
           <a href="#" class="page-footer__nav-link">Провести мероприятие</a>
@@ -96,68 +130,59 @@
           <a href="#" class="page-footer__nav-link">Контакты</a>
         </nav>
 
-        <form class="page-footer__form">
-          <span class="page-footer__form-subscribe">Подпишись и будь в курсе происходящего</span>
-          <div class="subscribe__wrapper">
-            <input type="email" name="email" placeholder="Email" class="subscribe__input" required />
-            <button type="submit" class="subscribe__submit">Подписаться</button>
+        <form action="https://jsonplaceholder.typicode.com/posts" class="page-footer__subscribe-form subscribe-form" id="js-subscribeForm">
+          <div class="subscribe-form__field">
+            <span class="subscribe-form__field-label">Подпишись и будь в курсе происходящего</span>
+
+            <div class="subscribe-form__wrapper">
+              <input id="js-subscribeEmail" class="subscribe-form__field-input" type="email" placeholder="Email" name="email" required />
+
+              <button class="subscribe-form__send-btn" type="submit" name="send">
+                Подписаться
+              </button>
+            </div>
           </div>
-          <label class="subscribe__check check">
-            <input type="checkbox" class="check__input" name="agree" checked />
+
+          <label class="check check--pt0 subscribe-form__check">
+            <input class="check__input" type="checkbox" name="agree" required checked />
+
             <span class="check__mark"></span>
             <span class="check__label check__label--s">
               Согласен на обработку персональных данных
             </span>
-
           </label>
         </form>
       </div>
 
-      <div class="page-footer__bottom">
-        <div class="page-footer__docs">
-          <span class="page-footer__milenials">© Millennials 2022</span>
-          <span class="page-footer__confidence">Политика конфиденциальности</span>
-          <span class="page-footer__cookies">Cookies</span>
+      <div class="page-footer__vault">
+        <div class="page-footer__policy">
+          <a href="#" class="link page-footer__millennials">© Millennials 2022</a>
+          <a href="#" class="link page-footer__confident">Политика конфиденциальности</a>
+          <a href="#" class="link page-footer__cookies">Cookies</a>
         </div>
-
-
-
         <div class="page-footer__social">
-          <a href="#" class="page-footer__link">
-            <svg class="page-footer__social-icon" width="24" height="24">
-              <use xlink:href="assets/icons/symbols.svg#insta"></use>
+          <a href="#" class="page-footer__inst-link">
+            <svg class="page-footer__social-icon" width="58" height="58">
+              <use xlink:href="assets/icons/symbols.svg#social_inst"></use>
             </svg>
           </a>
-          <a href="#" class="page-footer__link">
-            <svg class="page-footer__social-icon" width="24" height="24">
-              <use xlink:href="assets/icons/symbols.svg#vk"></use>
+          <a href="#" class="page-footer__inst-link">
+            <svg class="page-footer__social-icon" width="58" height="58">
+              <use xlink:href="assets/icons/symbols.svg#social_vk"></use>
             </svg>
           </a>
         </div>
-
-
-        <!-- <div class="page-footer__social">
-            <a href="#" class="page-footer__link">
-              <svg class="page-footer__social-icon" width="160" height="58">
-                <use xlink:href="assets/icons/symbols.svg#social_network"></use>
-              </svg>
-            </a>
-        </div> -->
-
-
         <div class="page-footer__tagree">
-          <span class="page-footer__promotion">Создание и продвижение</span>
-          <svg class="page-footer__tagree-icon" width="56" height="17">
-            <use xlink:href="assets/icons/symbols.svg#tagree"></use>
-
-          </svg>
+          <a href="#" class="link page-footer__tagree-label">Создание и продвижение
+            <svg class="page-footer__tagree-icon" width="56" height="17">
+              <use xlink:href="assets/icons/symbols.svg#tagree"></use>
+            </svg>
+          </a>
         </div>
       </div>
     </div>
-
-
-
   </footer>
+
 </body>
 
 </html>
