--- a/default.html
+++ b/default.html
@@ -27,7 +27,7 @@
   <meta name="theme-color" content="#ffffff" />
 
   <script src="scripts/jquery-3.7.1.min.js"></script>
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAELqrLiMyWfM_wwckJndQzmO9XEzvw_SU&amp"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAELqrLiMyWfM_wwckJndQzmO9XEzvw_SU"></script>
   <script defer src="scripts/swiper.min.js"></script>
   <script defer src="scripts/jquery.selectric.min.js"></script>
   <script defer src="scripts/jquery.mask.js"></script>
@@ -36,7 +36,6 @@
   <script defer src="scripts/jquery.validate-init.js"></script>
   <script defer src="scripts/main.js"></script>
 </head>
-
 
 <body class="body">
 
